--- a/src/shop.ui.prj/Styles/Border.axaml
+++ b/src/shop.ui.prj/Styles/Border.axaml
@@ -3,7 +3,7 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
         <Border
-          Classes="container"
+          Classes="container-product"
           Width="50" Height="50"
           Margin="20" />
     </Design.PreviewWith>
@@ -12,6 +12,14 @@
         <Setter Property="CornerRadius" Value="8" />
         <Setter Property="Margin" Value="8" />
         <Setter Property="Background" Value="#3b3b3b" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="#cbcbcb" />
+    </Style>
+
+    <Style Selector="Border.container-product">
+        <Setter Property="CornerRadius" Value="8" />
+        <Setter Property="Margin" Value="8" />
+        <Setter Property="Background" Value="#757575" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="BorderBrush" Value="#cbcbcb" />
     </Style>
