--- a/src/shop.ui.prj/Styles/Resources.axaml
+++ b/src/shop.ui.prj/Styles/Resources.axaml
@@ -3,10 +3,10 @@
 
     <FontFamily x:Key="DefaultFont">Segoe UI</FontFamily>
 
-    <x:Double x:Key="FontSize">12.5</x:Double>
-    <x:Double x:Key="SmallFontSize">10.5</x:Double>
+    <x:Double x:Key="FontSize">12</x:Double>
+    <x:Double x:Key="SmallFontSize">10</x:Double>
+    <x:Double x:Key="MediumFontSize">14</x:Double>
     <x:Double x:Key="LargeFontSize">16</x:Double>
-    <x:Double x:Key="ApplicationNameFontSize">16</x:Double>
 
     <CornerRadius x:Key="ButtonCornerRadius">3</CornerRadius>
 </ResourceDictionary>
