--- a/src/shop.client.prj/Views/Pages/Home/ProductBasketItem.axaml
+++ b/src/shop.client.prj/Views/Pages/Home/ProductBasketItem.axaml
@@ -5,30 +5,40 @@
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="using:Shop.Client.Views.Pages"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   x:DataType="local:ProductItemVM"
-  d:DesignHeight="450" d:DesignWidth="800"
+  d:DesignHeight="450" d:DesignWidth="300"
   mc:Ignorable="d"
-  x:Class="Shop.Client.Views.Pages.ProductItem">
+  x:Class="Shop.Client.Views.Pages.ProductBasketItem">
 
     <Border
       Classes="container-product"
-      Width="208" Height="329">
+      Height="80">
         <Grid
-          Margin="0,16,0,0"
-          RowDefinitions="auto,auto">
+          ColumnDefinitions="auto,*,auto"
+          Margin="10,0">
             <Image
-              Grid.Row="0"
-              Width="190" Height="147"
-              HorizontalAlignment="Center"
+              Grid.Column="0"
+              Width="70"
+              HorizontalAlignment="Center" VerticalAlignment="Center"
               Source="{Binding Image}"
               Stretch="Fill" />
 
             <Grid
-              Grid.Row="1"
+              Grid.Column="1"
               Margin="10,0"
-              RowDefinitions="auto,auto,auto,auto">
-                <Grid
+              RowDefinitions="auto,auto"
+              VerticalAlignment="Center">
+                <TextBlock
+                  Classes="default"
                   Grid.Row="0"
+                  Height="42"
+                  Margin="0,0,0,0"
+                  VerticalAlignment="Top"
+                  Text="{Binding ProductName}"
+                  TextTrimming="CharacterEllipsis" TextWrapping="Wrap" />
+                <Grid
+                  Grid.Row="1"
                   VerticalAlignment="Bottom"
+                  Margin="0,-8,0,0"
                   ColumnDefinitions="auto,*">
                     <TextBlock
                       Classes.price-with-sale="{Binding PriceBeforeSale, Converter={x:Static ObjectConverters.IsNotNull}}"
@@ -52,34 +62,16 @@
                           TextDecorations="Strikethrough" />
                     </TextBlock>
                 </Grid>
-                <TextBlock
-                  Classes="default"
-                  Grid.Row="1"
-                  Height="42"
-                  Margin="0,-2,0,0"
-                  VerticalAlignment="Top"
-                  Text="{Binding ProductName}"
-                  TextTrimming="CharacterEllipsis" TextWrapping="Wrap" />
-                <TextBlock
-                  Classes="default"
-                  Grid.Row="2"
-                  Margin="0,-4,0,0"
-                  Foreground="{DynamicResource SmokeGray}">
-                    <Run
-                      Text="{Binding Weight, TargetNullValue=0, Mode=OneWay}" />
-                    <Run
-                      Text="г" />
-                </TextBlock>
-
-                <controls:AddRemoveButton
-                  Grid.Row="3"
-                  Margin="0,10,0,0"
-                  HorizontalAlignment="Stretch"
-                  AddCommand="{Binding AddCommand}"
-                  Count="{Binding CurrentSelectedCount, Mode=TwoWay}"
-                  MaxCount="{Binding CurrentCount}"
-                  RemoveCommand="{Binding RemoveCommand}" />
             </Grid>
+
+            <controls:AddRemoveButton
+              Grid.Column="2"
+              Margin="0,0,0,0"
+              HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                  AddCommand="{Binding AddCommand}"
+                  RemoveCommand="{Binding RemoveCommand}"
+              Count="{Binding CurrentSelectedCount, Mode=TwoWay}"
+              MaxCount="{Binding CurrentCount}" />
         </Grid>
     </Border>
 </UserControl>
