--- a/src/shop.client.prj/Views/Pages/Profile/ProfileView.axaml
+++ b/src/shop.client.prj/Views/Pages/Profile/ProfileView.axaml
@@ -13,5 +13,8 @@
     </Design.DataContext>
 
     <TextBlock
-      Text="ProfilePustoyControl" />
+      Text="Пока пустая страница. В разработке..."
+      Classes="header"
+      HorizontalAlignment="Center"
+      VerticalAlignment="Center" />
 </UserControl>
